src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_async_arrow_x.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ lost    │
  ├────────►│
  │         │
