src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_autonumber.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ 1. first│
  ├────────►│
  │ 2. second
  │◄────────┤
  │         │
