src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_long_label_wraps_or_widens.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ this is a fairly long message label that takes space
  ├────────►│
  │         │
