src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_participant_with_label_via_as.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───────┐     ┌─────┐
│ Alice │     │ Bob │
└───┬───┘     └──┬──┘
    │ hi         │
    ├───────────►│
    │            │
