src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_self_message_with_label.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐
│ A │
└─┬─┘
  │ recurse deeply
  ├──┐
  │  │
  │◄─┘
  │
