src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_three_participants_chain.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐     ┌───┐
│ A │     │ B │     │ C │
└─┬─┘     └─┬─┘     └─┬─┘
  │ ask     │         │
  ├────────►│         │
  │         │ forward │
  │         ├────────►│
  │ answer  │         │
  │◄┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┤
  │         │         │
