src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_two_participants_solid.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ hello   │
  ├────────►│
  │         │
